Update dependencies and refactor resource management